# route-optimizer

./: README.md  pyproject.toml
output/: routes.geojson  routes_map.html  solution.json
src/route_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/vrp/: __init__.py  data.py  main.py  models.py  solver.py  visualization.py
tests/: test_data.py
